Fix header on smaller widths

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -14,7 +14,6 @@
   }
 }
 
-
 html, body {
   font-size: 18px;
   line-height: 1.4;
@@ -77,6 +76,9 @@ aside {
   }
 }
 
+@header-font-size: 15vw;
+@header-max-font-size: 8rem;
+
 header {
   display: flex;
   height: calc(100vh - 2 * var(--content-margin));
@@ -89,6 +91,17 @@ header {
 h1 {
   font-size: 8rem;
 }
+
+@media screen and (max-width: 600px) {
+  header {
+    border-bottom-width: 0.1vw;
+  }
+
+  h1 {
+    font-size: 15vw;
+  }
+}
+
 
 h2 {
   font-size: 2rem;
